src/components/objectDetails/ObjectDetails.css
/* LAYOUT */
.ObjectDetails {
  display: grid;
  grid-template-rows: repeat(6, 1fr);
  grid-template-columns: repeat(5, 20%);
  grid-gap: 1px;
}

.ObjectDetails .box {
  _box-shadow: 0 0 0 1px magenta inset;
  padding: 1rem;
  box-shadow: 0 0 0 1px currentColor;
}
.ObjectDetails header.box {
  grid-area: 1 / 1 / span 1 / -1
}
.ObjectDetails footer.box {
  grid-area: -2 / 1 / span 1 / -1
}

.ObjectDetails .box.-a-1 {
  grid-area: 2 / 1 / span 1 / span 2;
}
.ObjectDetails .box.-a-2 {
  grid-area: 3 / 1 / span 1 / span 2;
}
.ObjectDetails .box.-a-3 {
  grid-area: 4 / 1 / span 1 / span 1;
}
.ObjectDetails .box.-a-4 {
  grid-area: 4 / 2 / span 1 / span 1;
}


.ObjectDetails .box.-diagram {
  grid-area: 2 / 3 / span 3 / span 3;
}

.ObjectDetails .box.-customers {
  grid-area: 5 / 1 / span 1 / -1;
}
/* LAYOUT END*/

